# synchronizer

./: CMakeLists.txt  README.md  package.xml
demos/: demo_follower.cpp  demo_follower.py  demo_leader.cpp  demo_leader.py
include/synchronizer/: follower.hpp  leader.hpp
include/synchronizer/private/: follower_sync.hpp  leader_sync.hpp
src/: follower.cpp  follower_sync.cpp  leader.cpp  leader_sync.cpp
srcpy/: wrappers.cpp
tests/: unit_tests.cpp  unit_tests_synchronizer.cpp
