<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>synchronizer</name>
  <version>1.0.0</version>
  <description>API for synchronizing two processes via a shared memory</description>
  <license>BSD 3-Clause</license>
  <author email="vberenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mpi_cmake_modules</depend>
  <depend>shared_memory</depend>
  <depend>real_time_tools</depend>
  <depend>pybind11_vendor</depend>
  <depend>Boost</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_nose</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

